--- a/www/public/index.html
+++ b/www/public/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+	<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+
 	<title>pastcast</title>
 	<style>
 		body {
@@ -56,14 +58,14 @@
 			margin: auto;
 			width: 50%;
 			height: 200px;
-			max-width: 200px;
+			width: 200px;
 
 			display: inline-block;
 			vertical-align: middle;
 
 			position: relative;
 			background-image: url("sunlogo.png");
-			background-size: 200px auto;
+			background-size: cover;
 			background-position: 50% 50%;
 			background-repeat: no-repeat;
 			
@@ -82,7 +84,7 @@
 
 		.support {
 			font-family: Futura, Helvetica, Arial, sans-serif;
-			font-size: 0.75em;
+			font-size: 12px; /*0.75em;*/
 			color: #f9f9f0;
 			position: absolute;
 			bottom: 20px;
